samples/BankAccounts/src/Domain/BankAccounts/Errors/OverdraftBankAccountException.cs
namespace BankAccounts.Domain.BankAccounts.Errors
{
    internal class OverdraftBankAccountException : Exception
    {
        public OverdraftBankAccountException() : base(BankAccountErrors.OverdraftBankAccount) { }
    }
}
